# mistRust

./: Cargo.toml  LICENSE  README.md
script/: parseShellcode.sh
src/: linux_exec.rs  main.rs  windows_exec.rs
