[package]
name = "droppin_a_load"
version = "0.1.0"
authors = ["Ciaran McNally <mak@redbrick.dcu.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
mmap = "*"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features=[
    "winnt",
    "memoryapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "handleapi",
    "libloaderapi"
]}
